--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "winston": "^3.11.0",
     "xss-clean": "^0.1.4"
   }
 }
